Добавил заглушку action'а по созданию новой задачи

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -5,12 +5,18 @@ nlu:
     - Привет
     - Здравствуй
     - Добрый день
-# - intent: create_task
-#   examples: |
-#     - Создать новую задачу
-#     - Хочу добавить задачу
-#     - Новая задача: {заголовок задачи}
-#     - Добавить задачу: [заголовок задачи]
+
+- intent: add_task
+  examples: |
+    - Создать задачу [помыть посуду](task_name)
+    - Создай задачу [выгулять собаку](task_name)
+    - Нужно [купить продукты](task_name)
+    - Я хочу [сходить в магазин](task_name)
+    - Создай задачу:[сдать дз](task_name)
+    
+    
+    
+
 # - intent: list_tasks
 #   examples: |
 #     - Какие у меня задачи?
