Добавил экшн delete_task и его реализацию Удаляет задачу из базы

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -13,30 +13,23 @@ nlu:
     - Нужно [купить продукты](task_name)
     - Я хочу [сходить в магазин](task_name)
     - Создай задачу:[сдать дз](task_name)
+    - Сделай задачу [подтянуться 10 раз](task_name)
     
-    
-    
+- intent: show_all_tasks
+  examples: |
+    - Покажи мои задачи
+    - Что мне нужно сделать
+    - Что у меня в планах
+    - какие у меня задачи
+    - че по задачам
 
-# - intent: list_tasks
-#   examples: |
-#     - Какие у меня задачи?
-#     - Покажи список задач
-#     - Что у меня запланировано?
-# - intent: view_task
-#   examples: |
-#     - Подробности задачи {номер задачи}
-#     - Что там у задачи {номер задачи}?
-#     - Посмотри информацию о задаче {номер задачи}
-# - intent: update_task_status
-#   examples: |
-#     - Задача {номер задачи} выполнена
-#     - Отметить задачу {номер задачи} как выполненную
-#     - Изменить статус задачи {номер задачи}
-# - intent: delete_task
-#   examples: |
-#     - Удалить задачу {номер задачи}
-#     - Убрать задачу {номер задачи}
-#     - Хочу удалить задачу {номер задачи}
+- intent: complete_task
+  examples: |
+    - Я сделал задачу [12](task_id)
+    - [101](task_id) задача выполнена
+    - Отметь задачу [5](task_id) выполненной
+    - Выполнил [1243](task_id)
+
 - intent: goodbye
   examples: |
     - Пока
